--- a/_posts/2023-04-22-lab_main.md
+++ b/_posts/2023-04-22-lab_main.md
@@ -4,16 +4,9 @@ categories: [homelab, main]
 tags: [homelab,main]     # TAG names should always be lowercase
 pin: true
 ---
-(Working on it - April 22, 2023. May add docker containers)
-Index:
-[Presentation day]
---Normal index--
-Todo:
-- [ ] All linked pages should start and end with links to [next], [previous] and [home] pages ==use the page names instead of the "next"==
-- [ ] Troubleshooting or Misc page
 ## Project overview:
 ### Intro:
-This project aims to provide a manual/guide to creating a home lab. This home lab helps one to create an enterprise network on a server. You can simulate attacks, check how the firewall/IDS works, understand the logs and network traffic, and learn more from it. These instructions are provided based on what I could take away from Jeff McJunkin's [kickass home lab](http://bit.ly/kickasslab) ==SANS youtube==
+This project aims to provide a manual/guide to creating a home lab. This home lab helps one to create an enterprise network on a server. You can simulate attacks, check how the firewall/IDS works, understand the logs and network traffic, and learn more from it. These instructions are provided based on what I could take away from Jeff McJunkin's [kickass home lab](http://bit.ly/kickasslab) [SANS youtube](https://youtu.be/uzqwoufhwyk)
 
 ### [The `refresher` mode:](/posts/quick_version)
 1. Gain root on metasploitable2
@@ -30,25 +23,31 @@ Using an example. It contains:
 - Instructions on how to:
 	- Collect the network traffic (`pfsense` packet capture)
 	- Setup Active Directory
+
 ### My favorite parts:
 1. Setting up your own Authoritative DNS server for DNS based c2 using dnscat2
 2. Active Directory setup
 3. Port-forwarding setup on `PfSense` and `VyOS` router
+
 ### How did this help me:
 1. I wanted to see how the network traffic looks like during a DNS based c2. Good thing I had a lab setup, I was able to understand that in an instant. 
 2. Now, because it is on a level2 hypervisor - VMware workstation pro, I can copy the `pcap` files to my host OS, share, teach, train, and get feedback faster.
+
 ### What I found challenging:
 1. Setting up the `PfSense` - firewall rules, DNS, port-forwarding clashes with VMware.
 2. Authoritative DNS server - DNS propagation and TTL.
+
 ### Eye-openers:
 1. Snapshots ~ Time travel.(Dormamu, I've co...)
 2. For DNS, set low TTL values till things work out. 
 3. After you know how to setup `pfsense`, you wonder how you struggled with such a simple and elegant software
+
 ### Possible use cases:
 - Perform an attack -> export the network dump (`pcap` files) -> train employees to find the exploited vulnerabilities
 - A quick[^1] and safe environment for trying firewall rules, exploitation techniques, and tools.
 - You can create vulnerable systems, share them, grow as a group, perform pen-test or red team scenarios, and make reports.
 - Perform forensics on exploited machines
+
 ### What one can get from this manual:
 - I made a bunch of mistakes, and you can avoid them
 - Links and references that helped me understand the topics
@@ -68,42 +67,26 @@ Using an example. It contains:
 	- This is an extra step that can help you simulate your scenario or to make it a bit more realistic/challenging.
 	- Enable port-forwarding on the attacker's router (VyOS router - port 80, 443) for the reverse shells. 
 
-![VMware Network Settings](/assets/img/vmware_nw.png){: width="60%"}
-
-##### VMWare NAT (WAN) settings:
-![VMware NAT settings](/assets/img/vmware_NAT_info.png){: width="80%"} 
-![VMWare DNS settings](/assets/img/vmware_DNS_info.png){: width="80%"}
+[HowTo- Vmware configuration](/posts/vmware_configuration)
 
 #### Pfsense configuration:
-- Install and configure the pfsense networks. [Pfsense configuration](/posts/pfsense_configuration)
-- The three networks shall be configured as mentioned above.
-	- You can identify the networks based on the MAC address of the interface (vmware > settings)
-	  ![VMWare MAC address information](/assets/img/pfsense_vmware_settings_mac.png){: width = "40%"}
-	  - WAN's default gateway shall be `192.168.189.2` and I chose not to use IPv6.
-	  - Enable DHCP on LAN and OPT1(DMZ) networks. I chose a range of (`x.x.x.128` to `x.x.x.192`) for this. 
-- Set the interface addresses: (`/24` networks)
-	- WAN: `192.168.189.254`
-	- LAN: `10.10.20.254`
-	- OPT1(DMZ): `10.10.10.254`
-- Other settings
-- [ ] Name the settigs and path (General setup) in a seperate link.
-- [ ] This page should contain summarized steps. Example: Add static addresses to systems from status>DHCP leases.
-##### Network configuration- Pfsense:
-- Static IP assignment
-#### Pfsense Firewall Rules:
+- Install and configure the pfsense networks. [HowTo- Pfsense configuration](/posts/pfsense_configuration)
+- Assign static addresses to the machines
+- Setup the firewall rules to allow inbound traffic to the DMZ network's webserver.
+- Other rules: [firewall](/posts/pfsense_configuration/#firewall-rules)
 
 #### Setup port-forwarding on pfsense:
-- Problems caused by the clash between vmware NAT, DHCP, and port-forwarding rules
-- remove vmware dhcp
+- Uncheck vmware dhcp to avoid the clash between vmware NAT, DHCP, and port-forwarding rules with pfsense.[HowTo- Disable vmware DHCP](/posts/vmware_configuration/#vmware-settings)
+- [HowTo - Port forwarding on pfsense](/posts/pfsense_configuration/#port-forwarding)
+
 #### packet capture:
-cmd or web configurator
-### VMware networks:
-- If you know how to setup networks on vmware, just disable DHCP ==be specific==
-- Else, my vmware setup vid: //link (do not display)
-### VyOS setup: (at the end)
-- ==Check if you can export the configuration settings== => If yes, do curl or wget
+**Pfsense webconfigurator:** Diagnostics > packet capture
+
+### VyOS setup:
 - [NAT — VyOS 1.3.x (equuleus) documentation](https://docs.vyos.io/en/equuleus/configuration/nat/index.html)
-- [VyOS Community](https://vyos.net/get/) (select legacy > ==ova for vmware==)
+- [VyOS Community](https://vyos.net/get/) (select legacy > ova for vmware)
+- [VyOS router setup](/posts/vyos_setup)
+
 #### Port-forwarding:
 - For reverse shells
 
@@ -115,6 +98,7 @@ cmd or web configurator
 - Check the current network interfaces. You will find an offline interface.
 - Bring up the interface. It connects to the LAN network.
 - Scan the internal (LAN) network using `nmap`, find vulnerable systems, move laterally, and learn more about the enterprise.
+
 #### Forensics:
 - Use the `pcap` file from the packet capture. Learn what vulnerabilities the attacker used for exploitation.
 - Also, you can perform memory analysis using `vmem` files (you can see them when you take a snapshot of the machine). These files can help if you consider a scenario where the SOC team finds abnormal activity and takes a memory dump of that system.
