--- a/_posts/2023-04-22-lab_main.md
+++ b/_posts/2023-04-22-lab_main.md
@@ -57,17 +57,15 @@ Using an example. It contains:
 ### Example network:
 ![Home Lab Network Diagram](/assets/img/home_lab_nw.png)
 
-### Phase1 - Setup and initial access summary:
+### Phase1 - Setup and initial access:
 #### Network - VMWare configuration:
-- Make a NAT network (`192.168.189.0/24`). This shall be the WAN network for the PfSense firewall. [HowTo VMware configuration](/posts/vmware_configuration)
+- Make a NAT network (`192.168.189.0/24`). This shall be the WAN network for the PfSense firewall. [HowTo - VMware configuration](/posts/vmware_configuration)
 - Make a host-only network (`10.10.20.0/24`). This acts as the LAN network on Pfsense. (DHCP is enabled, but we assign static addresses)
 - Make another host-only network (`10.10.10.0/24`) -DMZ network (configured as OPT1 on Pfsense) with the metasploitable2 machine. The metaspoloitable2 machine has a connection to the LAN network but is currently offline.
 	- Port forward the default metasploitable2's website to the WAN port 8080.
 - Create one more host-only network (`18.0.0.0/24`) for the attacker. Install the VyOS router with the same gateway (`192.168.189.2/24`) as the PfSense WAN network.
 	- This is an extra step that can help you simulate your scenario or to make it a bit more realistic/challenging.
 	- Enable port-forwarding on the attacker's router (VyOS router - port 80, 443) for the reverse shells. 
-
-[HowTo- Vmware configuration](/posts/vmware_configuration)
 
 #### Pfsense configuration:
 - Install and configure the pfsense networks. [HowTo- Pfsense configuration](/posts/pfsense_configuration)
@@ -82,13 +80,11 @@ Using an example. It contains:
 #### packet capture:
 **Pfsense webconfigurator:** Diagnostics > packet capture
 
-### VyOS setup:
+#### VyOS setup:
 - [NAT — VyOS 1.3.x (equuleus) documentation](https://docs.vyos.io/en/equuleus/configuration/nat/index.html)
 - [VyOS Community](https://vyos.net/get/) (select legacy > ova for vmware)
-- [VyOS router setup](/posts/vyos_setup)
-
-#### Port-forwarding:
-- For reverse shells
+- [HowTo - VyOS router setup](/posts/vyos_setup)
+- [HowTo - VyOS port translation](/posts/vyos_setup/#vyos-router-port-translation)
 
 #### Attack scenario:
 - Recon the WAN network `192.168.189.0/24` using `nmap` (Disable host discover `-Pn`). You'll find the firewall address
@@ -101,25 +97,21 @@ Using an example. It contains:
 
 #### Forensics:
 - Use the `pcap` file from the packet capture. Learn what vulnerabilities the attacker used for exploitation.
-- Also, you can perform memory analysis using `vmem` files (you can see them when you take a snapshot of the machine). These files can help if you consider a scenario where the SOC team finds abnormal activity and takes a memory dump of that system.
+- You can perform memory analysis using `vmem` files (you can see them when you take a snapshot of the machine). These files can help in a scenario where the SOC team finds abnormal activity and takes a memory dump of that system.
 
 ### Phase2 - DNS attacks summary:
 
-## Detailed steps:
-[Helpful links]
-VMware network export: [Exporting Network Settings (vmware.com)](https://docs.vmware.com/en/VMware-Workstation-Pro/17/com.vmware.ws.using.doc/GUID-8563548D-5FD7-4D78-AFAF-4A28E4EA48BD.html)
 
 ### Active Directory Setup:
-//link
+[Active Directory on Azure](https://kamran-bilgrami.medium.com/ethical-hacking-lessons-building-free-active-directory-lab-in-azure-6c67a7eddd7f)
 
 
-## ==Note==
+## Note
 1. Use LAN segments if you are dealing with malware analysis. You may need to follow additional steps to isolate the machine.
+
 My takeaway:
 - I believe that something like this could've been useful for my past self to understand basic concepts of networking and penetration testing. So, I'm sure it can help someone who wants to learn or teach.
 - Looks too simple or basic? Good, that was the point. Can you do better? That is the expected outcome. If you can understand and follow along, you can make and test better scenarios.
 
-## References:
 
-
-[^1]: This is faster to set up when compared to working with a level 1 hypervisor.
+[^1]: This is faster to set up, and easier to work with when compared to working with a level 1 hypervisor.
