--- a/_posts/2023-04-22-c2_over_dns.md
+++ b/_posts/2023-04-22-c2_over_dns.md
@@ -3,8 +3,10 @@ title: C2 over DNS
 categories: [homelab]
 tags: [homelab,dns]     # TAG names should always be lowercase
 ---
+[main](/posts/lab_main)
+
 # Command and Control server over DNS
-My sources:
+Sources:
 [TryHackMe | DNS in detail](https://tryhackme.com/room/dnsindetail),
 [TryHackMe | DNS Manipulation](https://tryhackme.com/room/dnsmanipulation),
 [TryHackMe | Data Exfiltration](https://tryhackme.com/room/dataxexfilt).
@@ -12,15 +14,18 @@ My sources:
 
 Setup your own authoritative DNS server using AWS: [STOK's video](https://www.youtube.com/watch?v=p8wbebEgtDk) 
 	
-You can use `iodine`, `dnscat2`, and `cobalt strike` for c2 over DNS. I am using dnscat2.
+You can use `iodine`, `dnscat2`, and `cobalt strike` for c2 over DNS. I am using dnscat2 on a digitaloceans droplet.
 
 ## DNS server setup using digitaloceans
 1. Spin up a droplet (2GB memory) - You'll get a public ip address
-2. Connect to the server. On Windows you can use the Terminal app with WSL(Ubuntu or Kali) on Windows. You can SSH into the server and continue with the following steps.
-3. Create a new user, and setup the terminal environment. `[How-Misc]`
+2. Connect to the server. On Windows, you can use the Terminal app with WSL(Ubuntu or Kali) on Windows. You can SSH into the server and continue with the following steps.
+3. You'll get a root user access. Create a new user on the server.
 4. Take a snapshot of the droplet
 5. Setup the firewall rules for the droplet. All traffic in and out shall be blocked by default. So, you have to manually enable them for your droplet. Manage > Networking > Firewalls
-6. //firewall rules shot
+
+### Firewall rules:
+![Inbound rules](/assets/img/inbound_do_rules.png)
+![Outbound rules](/assets/img/outbound_do_rules.png)
 
 ## Get a Domain Name
 - I went with hostgator. You can find cheap(<$1) domain names like the `.site` TLD.
@@ -31,13 +36,20 @@ You can use `iodine`, `dnscat2`, and `cobalt strike` for c2 over DNS. I am using
 
 ## Domain management using digitaloceans
 [DNS Propagation Checker - Global DNS Testing Tool (whatsmydns.net)](https://www.whatsmydns.net/)
-- Set the nameservers
+- Configure the nameservers to digitalocean nameservers at your domain provider account.
 - Add a domain to your droplet
-- While making records, make sure that you keep the ttl low till things work (Initially, I chose something around 5 to 15 minutes. Now they are back to defaults). More info: [How to choose DNS TTL values | APNIC Blog](https://blog.apnic.net/2019/09/27/how-to-choose-dns-ttl-values/)
-- Set the Records as follows:
+
+> While making records, make sure that you keep the ttl low till things work (Initially, I chose one-tenth value. Now they are back to defaults).
+{: .prompt-info}
+
+More info: [How to choose DNS TTL values - APNIC Blog](https://blog.apnic.net/2019/09/27/how-to-choose-dns-ttl-values/)
+
+Set the Records as follows:
+
+![DNS records](/assets/img/dns_records_do.png)
 
 ## dnscat2 setup
-> take the server snapshot before proceeding ==check again==
+> Take the server snapshot before you proceed
 ```bash
 # on client
 git clone https://github.com/iagox86/dnscat2.git
@@ -49,9 +61,11 @@ sudo make
 	# wget --no-parent -r http://example.com/DIRECTORY
 ```
 
+> Installation on the server - as a regular user (not as a root):
+{: .prompt-warning}
+
 ```bash
-# on the server
-# install ruby (or "ruby-dev" on error: `require` - loaderror) and gem
+# install ruby (or "ruby-dev" if you get an error: `require` - loaderror) and gem
 git clone https://github.com/iagox86/dnscat2.git
 cd dnscat2/server/
 sudo gem install bundler
@@ -71,8 +85,14 @@ dnscat2>
 	windows
 	window -i 1 # session number of the connection
 	help # get shell
+	shell
+	# ctr+z to escape
+	windows # list
 	window -i 2 # go to the sh window
 	
 # you can run multiple servers on multiple ports using dnscat2. The client can send different packets to different ports
 ```
 learn more from: [dnscat2](https://github.com/iagox86/dnscat2.git)
+
+Network traffic:
+![dns](/assets/img/dnscat2_traffic_blur.png)
