--- a/_posts/2023-04-22-lab_main.md
+++ b/_posts/2023-04-22-lab_main.md
@@ -93,14 +93,14 @@ Using an example. It contains:
 - Escalate privileges, and gain root access through another reverse shell. Use port 443 of the same router.
 - Check the current network interfaces. You will find an offline interface.
 - Bring up the interface. It connects to the LAN network.
-- Scan the internal (LAN) network using `nmap`, find vulnerable systems, move laterally, and learn more about the enterprise.
+- Scan the internal (LAN) network using `nmap`, find vulnerable systems, move laterally, and learn more about the enterprise. [HowTo - metasploitable2 exploitation](/posts/quick_version)
 
 #### Forensics:
 - Use the `pcap` file from the packet capture. Learn what vulnerabilities the attacker used for exploitation.
 - You can perform memory analysis using `vmem` files (you can see them when you take a snapshot of the machine). These files can help in a scenario where the SOC team finds abnormal activity and takes a memory dump of that system.
 
 ### Phase2 - DNS attacks summary:
-
+> Setup an authoritative DNS server and get a command an control server using dnscat2. [HowTo - dnscat2](/posts/c2_over_dns)
 
 ### Active Directory Setup:
 [Active Directory on Azure](https://kamran-bilgrami.medium.com/ethical-hacking-lessons-building-free-active-directory-lab-in-azure-6c67a7eddd7f)
