--- a/_posts/2023-04-22-c2_over_dns.md
+++ b/_posts/2023-04-22-c2_over_dns.md
@@ -3,7 +3,7 @@ title: C2 over DNS
 categories: [homelab]
 tags: [homelab,dns]     # TAG names should always be lowercase
 ---
-[main](/posts/lab_main)
+[main](/posts/homelab_intro)
 
 # Command and Control server over DNS
 Sources:
