Title and path updates

--- a/_posts/2023-04-22-c2_over_dns.md
+++ b/_posts/2023-04-22-c2_over_dns.md
@@ -1,7 +1,8 @@
 ---
 title: C2 over DNS
 categories: [homelab]
-tags: [homelab,dns]     # TAG names should always be lowercase
+tags: [homelab, dns] # TAG names should always be lowercase
+img_path: /assets/img/homelab
 ---
 [main](/posts/homelab_intro)
 
@@ -24,8 +25,8 @@ You can use `iodine`, `dnscat2`, and `cobalt strike` for c2 over DNS. I am using
 5. Setup the firewall rules for the droplet. All traffic in and out shall be blocked by default. So, you have to manually enable them for your droplet. Manage > Networking > Firewalls
 
 ### Firewall rules:
-![Inbound rules](/assets/img/inbound_do_rules.png)
-![Outbound rules](/assets/img/outbound_do_rules.png)
+![Inbound rules](inbound_do_rules.png)
+![Outbound rules](outbound_do_rules.png)
 
 ## Get a Domain Name
 - I went with hostgator. You can find cheap(<$1) domain names like the `.site` TLD.
@@ -46,7 +47,7 @@ More info: [How to choose DNS TTL values - APNIC Blog](https://blog.apnic.net/20
 
 Set the Records as follows:
 
-![DNS records](/assets/img/dns_records_do.png)
+![DNS records](dns_records_do.png)
 
 ## dnscat2 setup
 > Take the server snapshot before you proceed
@@ -95,4 +96,4 @@ dnscat2>
 learn more from: [dnscat2](https://github.com/iagox86/dnscat2.git)
 
 Network traffic:
-![dns](/assets/img/dnscat2_traffic_blur.png)
+![dns](dnscat2_traffic_blur.png)
