--- a/_posts/2023-04-22-c2_over_dns.md
+++ b/_posts/2023-04-22-c2_over_dns.md
@@ -1,6 +1,6 @@
 ---
 title: C2 over DNS
-categories: [homelab]
+categories: [Homelab]
 tags: [homelab, dns] # TAG names should always be lowercase
 img_path: /assets/img/homelab
 ---
@@ -19,10 +19,10 @@ You can use `iodine`, `dnscat2`, and `cobalt strike` for c2 over DNS. I am using
 
 ## DNS server setup using digitaloceans
 1. Spin up a droplet (2GB memory) - You'll get a public ip address
-2. Connect to the server. On Windows, you can use the Terminal app with WSL(Ubuntu or Kali) on Windows. You can SSH into the server and continue with the following steps.
+2. Connect to the server. On Windows, you can use the Terminal app with WSL(Ubuntu or Kali). You can SSH into the server and continue with the following steps.
 3. You'll get a root user access. Create a new user on the server.
-4. Take a snapshot of the droplet
-5. Setup the firewall rules for the droplet. All traffic in and out shall be blocked by default. So, you have to manually enable them for your droplet. Manage > Networking > Firewalls
+4. Take a snapshot of the droplet.
+5. Set up the firewall rules for the droplet. All traffic in and out shall be blocked by default. So, you have to manually enable them for your droplet. Manage > Networking > Firewalls
 
 ### Firewall rules:
 ![Inbound rules](inbound_do_rules.png)
@@ -93,7 +93,7 @@ dnscat2>
 	
 # you can run multiple servers on multiple ports using dnscat2. The client can send different packets to different ports
 ```
-learn more from: [dnscat2](https://github.com/iagox86/dnscat2.git)
+learn more from [dnscat2](https://github.com/iagox86/dnscat2.git)
 
 Network traffic:
 ![dns](dnscat2_traffic_blur.png)
