fixed deployment issue - link not found

--- a/_posts/2023-11-18-wa-sqli.md
+++ b/_posts/2023-11-18-wa-sqli.md
@@ -10,7 +10,7 @@ author: Snabith
 
 - Portswigger's SQLi module: [SQLi](https://portswigger.net/web-security/sql-injection)
 - Lab scripts for Blind SQLi: [SQLi scripts](https://github.com/snabith/burpsuite-prep/tree/main/SQLi)
-- Jumpto: [Labs](/posts/was-sqli#Labs)
+- Jumpto: [Labs](/posts/wa-sqli#sqli-labs)
 
 # Concepts
 ## SQLi
@@ -217,7 +217,8 @@ This will result in a DNS lookup like the following, allowing you to view the ca
 > Out-of-band ([OAST](https://portswigger.net/burp/application-security-testing/oast)) techniques are an extremely powerful way to detect and exploit blind SQL injection, due to the high likelihood of success and the ability to directly exfiltrate data within the out-of-band channel. For this reason, `OAST techniques are often preferable` even in situations where other techniques for blind exploitation do work.
 {: .prompt-info}
 
-# Labs
+## SQLi Labs
+
 > The following information can only help if you are working on the labs. The following can be used as a reference. That being said, solving the blind SQLi labs without the pro version can feel unproductive. I made python scripts that uses socket programming to automate information retrieveal. Try to make your own scripts by understanding the concepts. Socket programming can be a great tool for anyone targeting offensive security roles (Although, I used requests module in the scripts). You can learn more from my Network security series.
 {:.prompt-tip}
 [SQLi scripts](https://github.com/snabith/burpsuite-prep/tree/main/SQLi)
